--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@
     <!-- Write your application here -->
 
     <p>
-      Welcome to your awesome web app.
+      Welcome to your awesome web app ...
     </p>
 
     <!-- Using require.js, a module system for javascript, include the
