--- a/www/index.html
+++ b/www/index.html
@@ -2,26 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-
-    <!-- Place favicon.ico in the root directory -->
-
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
-    <!-- Use this installation button to install locally without going
-         through the marketpace (see app.js) -->
+    <!-- Use this installation button to install locally without going through the marketpace (see app.js) -->
     <button id="install-btn">Install</button>
-
     <!-- Write your application here -->
-
     <p>
       Welcome to your awesome web app ...
     </p>
-
     <!-- Using require.js, a module system for javascript, include the
          js files. This loads "main.js", which in turn can load other
          files, all handled by require.js:
