--- a/www/socket.io.html
+++ b/www/socket.io.html
@@ -5,11 +5,12 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.10/socket.io.min.js"></script>
   </head>
   <body>
     <ul class="message"></ul>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/lib/jquery-1.9.1.min.js"><\/script>')</script>
+    <script src="js/lib/socket.io.min.js"></script>
     <script>
     // Select node server depending on environment ...
     if(location.host.indexOf('localhost') !== -1) {
