Added font awesome example

--- a/www/socket.io.html
+++ b/www/socket.io.html
@@ -5,11 +5,14 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap/bootstrap-responsive.min.css">
   </head>
   <body>
     <ul class="message"></ul>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/lib/jquery-1.9.1.min.js"><\/script>')</script>
+    <script src="js/lib/bootstrap.min.js"></script>
     <script src="js/lib/socket.io.min.js"></script>
     <script>
     // Select node server depending on environment ...
