--- a/www/install.html
+++ b/www/install.html
@@ -5,6 +5,7 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap/bootstrap-responsive.min.css">
     <link rel="stylesheet" href="css/app.css">
     <script src="js/lib/modernizr-2.6.2-respond-1.1.0.min.js"></script>
