Add link to github

--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,13 @@
                     </ul>
                 </p>
                 <br />
-                <p>Available examples:
+                <p>Project GitHub:
+                    <ul>
+                        <li><a href="https://github.com/takanotsume/factory" target="_blank">https://github.com/takanotsume/factory</a></li>
+                    </ul>
+                </p>
+                <br />
+                <p>Examples:
                     <ul>
                         <li><a href="bootstrap.html">HTML 5 Initializr (Boilerplate+Modernizer)</a></li>
                         <li><a href="install.html">Mozilla Web app install button</a></li>
