--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,7 @@
                         <li>Nodej JS</li>
                         <li>Express 3.x</li>
                         <li>Socket.io</li>
-                        <li>Redis</li>
+                        <li>MongoDB, Redis</li>
                         <li>Node Jitsu</li>
                         <li>gh-pages</li>
                         <li>Boilerplate HTML5, Bootstrap, Font Awesome</li>
