--- a/www/bootstrap.html
+++ b/www/bootstrap.html
@@ -18,11 +18,16 @@
             }
         </style>
         <link rel="stylesheet" href="css/bootstrap/bootstrap-responsive.min.css">
+        <link rel="stylesheet" href="css/font-awesome/font-awesome.css">
         <link rel="stylesheet" href="css/main.css">
 
         <script src="js/lib/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
     <body>
+        <!--[if IE 7]>
+        <link rel="stylesheet" href="css/font-awesome/font-awesome-ie7.min.css">
+        <![endif]-->
+
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
@@ -106,9 +111,9 @@
 
         <!-- /template -->
         <script id="entry-template" type="text/x-handlebars-template">
-            <div class="alert fade in">
+            <div class="alert fade in alert-error">
                 <button data-dismiss="alert" class="close" type="button">×</button>
-                <strong>{{{title}}}</strong> {{body}}
+                <i class="icon-warning-sign" /> <strong>{{{title}}}</strong> {{body}}
             </div>
         </script>
 
