rename project and add impress

--- a/www/index.html
+++ b/www/index.html
@@ -20,9 +20,10 @@
 
             <!-- Main hero unit for a primary marketing message or call to action -->
             <div class="hero-unit">
-                <h1>Factory Project</h1>
+                <h1>Hirameki Project</h1>
                 <br />
-                <p>Exploring project development best practice factoring a full server/client web app project using:
+                <p>Hirameki (閃き) means a flash of an idea ...<br /><br />
+                    Exploring project development best practice factoring a full server/client web app project using:
                     <ul>
                         <li>Nodej JS</li>
                         <li>Express 3.x</li>
