--- a/www/bootstrap.html
+++ b/www/bootstrap.html
@@ -42,7 +42,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="#">Factory</a>
+                    <a class="brand" href="#">Hirameki</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li class="active"><a href="#">Home</a></li>
@@ -79,7 +79,7 @@
             <div class="hero-unit">
                 <h1>Hello, world!</h1>
                 <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+                <p><a class="btn btn-primary btn-large">Test bootstrap alert component and font awesome &raquo;</a></p>
             </div>
 
             <!-- Example row of columns -->
