--- a/www/index.html
+++ b/www/index.html
@@ -20,10 +20,10 @@
 
             <!-- Main hero unit for a primary marketing message or call to action -->
             <div class="hero-unit">
-                <h1>Hirameki Project</h1>
+                <h1>The Hirameki Project <img src="img/lamp/lamp_48x48.png" /></h1>
                 <br />
                 <p>Hirameki (閃き) means a flash of an idea ...<br /><br />
-                    Exploring project development best practice factoring a full server/client web app project using:
+                    Exploring project development best practice by factoring a full server/client web app project using:
                     <ul>
                         <li>Nodej JS</li>
                         <li>Express 3.x</li>
@@ -31,7 +31,9 @@
                         <li>MongoDB, Redis</li>
                         <li>Node Jitsu</li>
                         <li>gh-pages</li>
-                        <li>Boilerplate HTML5, Bootstrap, Font Awesome</li>
+                        <li>Bootstrap, Modernizer, Boilerplate HTML5, Font Awesome</li>
+                        <li>Backbone.js</li>
+                        <li>Impress.js</li>
                     </ul>
                 </p>
                 <br />
