Add html demo link

--- a/www/html5.html
+++ b/www/html5.html
@@ -24,6 +24,9 @@
                 <br />
                 <p class="message">
                 </p>
+                <p>
+                    - More examples at <a href="http://html5demos.com/" target="_blank">http://html5demos.com</a>
+                </p>
             </div>
 
         </div>
