--- a/www/index.html
+++ b/www/index.html
@@ -49,6 +49,8 @@
                         <li><a href="install.html">Mozilla Web app install button</a></li>
                         <li><a href="socket-io.html">Socket.io client</a></li>
                         <li><a href="font-awesome.html">Font Awesome</a></li>
+                        <li><a href="html5.html">HTML 5 Features</a></li>
+                        <li><a href="impress.html">Impress</a></li>
                     </ul>
                 </p>
                 <br />
