--- a/www/index.html
+++ b/www/index.html
@@ -22,8 +22,8 @@
             <div class="hero-unit">
                 <h1>The Hirameki Project <img src="img/lamp/lamp_48x48.png" /></h1>
                 <br />
-                <p>Hirameki (閃き) means a flash of an idea ...<br /><br />
-                    Exploring project development best practice by factoring a full server/client web app project using:
+                <p>Hirameki (閃き): A flash of an idea ...<br /><br />
+                    Exploring best practice by factoring a server/client web app project using:
                     <ul>
                         <li>Nodej JS</li>
                         <li>Express 3.x</li>
@@ -31,7 +31,7 @@
                         <li>MongoDB, Redis</li>
                         <li>Node Jitsu</li>
                         <li>gh-pages</li>
-                        <li>Bootstrap, Modernizer, Boilerplate HTML5, Font Awesome</li>
+                        <li>Bootstrap, Modernizer, Boilerplate, Font Awesome</li>
                         <li>Backbone.js</li>
                         <li>Impress.js</li>
                     </ul>
@@ -45,7 +45,8 @@
                 <br />
                 <p>Examples:
                     <ul>
-                        <li><a href="bootstrap.html">HTML 5 Initializr (Boilerplate+Modernizer)</a></li>
+                        <li><a href="bootstrap.html">Initializr (Bootstrap, Boilerplate, Modernizer, ...)</a><br />
+                        Tuto: <a href="http://www.siteduzero.com/informatique/tutoriels/bootstrap-de-twitter-un-kit-css-et-plus">Bootstrap</a></li>
                         <li><a href="install.html">Mozilla Web app install button</a></li>
                         <li><a href="socket-io.html">Socket.io client</a></li>
                         <li><a href="font-awesome.html">Font Awesome</a></li>
