Added update button

--- a/www/index.html
+++ b/www/index.html
@@ -43,7 +43,7 @@
                     </ul>
                 </p>
                 <br />
-                <p>Examples:
+                <p>Explorations:
                     <ul>
                         <li><a href="bootstrap.html">Initializr (Bootstrap, Boilerplate, Modernizer, ...)</a><br />
                         Tuto: <a href="http://www.siteduzero.com/informatique/tutoriels/bootstrap-de-twitter-un-kit-css-et-plus">Bootstrap</a></li>
