Add hammer.js demo

--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
                         <li>Bootstrap, Modernizer, Boilerplate, Font Awesome</li>
                         <li>Backbone.js</li>
                         <li>Impress.js</li>
+                        <li>Hammer.js</li>
                     </ul>
                 </p>
                 <br />
@@ -51,7 +52,8 @@
                         <li><a href="socket-io.html">Socket.io client</a></li>
                         <li><a href="font-awesome.html">Font Awesome</a></li>
                         <li><a href="html5.html">HTML 5 Features</a></li>
-                        <li><a href="impress.html">Impress</a></li>
+                        <li><a href="impress.html">Impress ( Demo Slides)</a></li>
+                        <li><a href="hammer.html">Hammer - Multitouch lib</a></li>
                     </ul>
                 </p>
                 <br />
