--- a/www/index.html
+++ b/www/index.html
@@ -25,26 +25,12 @@
                 <p>Hirameki (閃き): A flash of an idea ...<br /><br />
                     Exploring best practice by factoring a server/client web app project using:
                     <ul>
-                        <li>Nodej JS</li>
-                        <li>Express 3.x</li>
-                        <li>Socket.io</li>
-                        <li>MongoDB, Redis</li>
-                        <li>Node Jitsu</li>
-                        <li>gh-pages</li>
-                        <li>Bootstrap, Modernizer, Boilerplate, Font Awesome</li>
-                        <li>Backbone.js</li>
-                        <li>Impress.js</li>
-                        <li>Hammer.js</li>
+                        <li>Nodej JS, Express 3.x, Socket.io, MongoDB, Redis,Node Jitsu, gh-pages, Bootstrap, Modernizer, Boilerplate, Font Awesome, Backbone.js, Impress.js, Hammer.js</li>
                     </ul>
                 </p>
-                <br />
-                <p>Project GitHub:
-                    <ul>
-                        <li><a href="https://github.com/takanotsume/factory" target="_blank">https://github.com/takanotsume/factory</a></li>
-                    </ul>
+                <p>Project GitHub: <a href="https://github.com/takanotsume/hirameki" target="_blank">https://github.com/takanotsume/hirameki</a>
                 </p>
-                <br />
-                <p>Explorations:
+                <p>Exploration:
                     <ul>
                         <li><a href="bootstrap.html">Initializr (Bootstrap, Boilerplate, Modernizer, ...)</a><br />
                         Tuto: <a href="http://www.siteduzero.com/informatique/tutoriels/bootstrap-de-twitter-un-kit-css-et-plus">Bootstrap</a></li>
@@ -57,7 +43,7 @@
                     </ul>
                 </p>
                 <br />
-                <a href="JavaScript:location.reload(true)" class="btn btn-primary btn-large">update</a>
+                <a href="JavaScript:location.reload(true)" class="btn btn-primary btn-large">Test page reload</a>
             </div>
 
         </div>
