--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,7 @@
                         <li><a href="html5.html">HTML 5 Features</a></li>
                         <li><a href="impress.html">Impress ( Demo Slides)</a></li>
                         <li><a href="hammer.html">Hammer - Multitouch lib</a></li>
+                        <li><a href="slideout.html">Pure CSS - Slide out menu</a></li>
                     </ul>
                 </p>
                 <br />
