--- a/www/test.html
+++ b/www/test.html
@@ -121,6 +121,8 @@
 
         var current_pane = 0;
 
+        var socket = io.connect('http://localhost:3002/');
+
         /**
          * initial
          */
@@ -226,14 +228,16 @@
                     break;
             }
         }
-
+ 
         $(document).keydown(function(e){
             switch(e.keyCode) {
                 case 37:
+                	socket.emit('server', { message: 'swipeleft' });
                     self.next();
                     break;
                 case 39:
-                self.prev();
+                	socket.emit('server', { message: 'swiperight' });
+                	self.prev();
                 break;
             }
         });
@@ -241,18 +245,6 @@
         var hammertime = Hammer(element.get(0), {
             prevent_default: true
         }).on("release dragleft dragright swipeleft swiperight", handleHammer);
-
-        var socket = io.connect('http://10.0.0.5:3002/');
-
-        socket.on('connect', function() {
-          socket.on('swipe', function (data) {
-            if (data.message=='swipeleft') {
-                self.next();
-            } else if (data.message=='swiperight') {
-                self.prev();
-            }
-          });
-        });
 
     }
 
