--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
                 <h1>The Hirameki Project <img src="img/lamp/lamp_48x48.png" /></h1>
                 <br />
                 <p>Hirameki (閃き): A flash of an idea ...<br /><br />
-                    Exploring best practice by factoring a server/client web app project using:
+                    Exploring by factoring a server/client web app project using:
                     <ul>
                         <li>Nodej JS, Express 3.x, Socket.io, MongoDB, Redis,Node Jitsu, gh-pages, Bootstrap, Modernizer, Boilerplate, Font Awesome, Backbone.js, Impress.js, Hammer.js</li>
                     </ul>
