Add JQM example

--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,9 @@
                         <li><a href="impress.html">Impress ( Demo Slides)</a></li>
                         <li><a href="hammer.html">Hammer - Multitouch lib</a></li>
                         <li><a href="slideout.html">Pure CSS - Slide out menu</a></li>
+                        <li><a href="swipe.html">Swipe io server</a></li>
+                        <li><a href="sidetap.html">Sidetap</a></li>
+                        <li><a href="jqm.html">JQuery Mobile</a></li>
                     </ul>
                 </p>
                 <br />
