--- a/www/jqm.html
+++ b/www/jqm.html
@@ -31,7 +31,7 @@
 		<p>View internal page called <a href="#bar" data-transition="slide">bar</a></p>
 
 		<div class="ui-grid-b">
-		    <div class="ui-block-a"><div class="ui-bar ui-bar-e" style="height:60px">A</div></div>
+		    <div class="ui-block-a">456</div>
 		    <div class="ui-block-b"><div class="ui-bar ui-bar-e" style="height:60px">B</div></div>
 		    <div class="ui-block-c"><div class="ui-bar ui-bar-e" style="height:60px">C</div></div>
 		    <div class="ui-block-a"><div class="ui-bar ui-bar-e" style="height:60px">A</div></div>
@@ -94,7 +94,7 @@
 		$('#summary').click(function() {
 		    $.mobile.changePage($('#bar'), 'slide');
 		});
-		
+
 		/*
 		$(document).on("swiperight", function(event, ui) {
 			$("#leftpanel1").panel("open", {display: 'overlay', position: 'right'} );
