Add circle menu tests

--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
                 <p>Hirameki (閃き): A flash of an idea ...<br /><br />
                     Exploring by factoring a server/client web app project using:
                     <ul>
-                        <li>Nodej JS, Express 3.x, Socket.io, MongoDB, Redis,Node Jitsu, gh-pages, Bootstrap, Modernizer, Boilerplate, Font Awesome, Backbone.js, Impress.js, Hammer.js, Phantomjs</li>
+                        <li>Nodej JS, Express 3.x, Socket.io, MongoDB, Redis,Node Jitsu, gh-pages, Bootstrap, Modernizer, Boilerplate, Font Awesome, Backbone.js, Impress.js, Hammer.js, Phantomjs, Jquery Mobile, Ratchet/Junior</li>
                     </ul>
                 </p>
                 <p>Project GitHub: <a href="https://github.com/takanotsume/hirameki" target="_blank">https://github.com/takanotsume/hirameki</a>
