--- a/www/jqm.html
+++ b/www/jqm.html
@@ -96,6 +96,7 @@
 		});
 
 		/*
+		$('#handlebarsData').trigger('create');
 		$(document).on("swiperight", function(event, ui) {
 			$("#leftpanel1").panel("open", {display: 'overlay', position: 'right'} );
 		});
