--- a/www/hammer.html
+++ b/www/hammer.html
@@ -182,6 +182,9 @@
         this.prev = function() { return this.showPane(current_pane-1, true); };
 
         function handleHammer(ev) {
+
+
+
             // disable browser scrolling
             ev.gesture.preventDefault();
 
@@ -202,6 +205,7 @@
                     break;
 
                 case 'swipeleft':
+                    console.log(ev.gesture);
                     self.next();
                     ev.gesture.stopDetect();
                     break;
