--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,13 @@
                     <ul>
                         <li>Nodej JS, Express 3.x, Socket.io, MongoDB, Redis,Node Jitsu, gh-pages, Bootstrap, Modernizer, Boilerplate, Font Awesome, Backbone.js, Impress.js, Hammer.js, Phantomjs, Jquery Mobile, Ratchet/Junior</li>
                     </ul>
+                    <ul>
+                        <li>
+                        To explore:<br />
+                        http://cssdeck.com/labs/css3-animated-circles<br />
+                        http://paulirish.com/2011/requestanimationframe-for-smart-animating/
+                        </li>
+                    </ul>
                 </p>
                 <p>Project GitHub: <a href="https://github.com/takanotsume/hirameki" target="_blank">https://github.com/takanotsume/hirameki</a>
                 </p>
