--- a/www/index.html
+++ b/www/index.html
@@ -22,8 +22,8 @@
             <div class="hero-unit">
                 <h1>The Hirameki Project <img src="img/lamp/lamp_48x48.png" /></h1>
                 <br />
-                <p>Hirameki (閃き): A flash of an idea ...<br /><br />
-                    Exploring by factoring a server/client web app project using:
+                <p>Hirameki (閃き): A flash of an idea ... powered by node ...<br /><br />
+                    Exploring technologies by factoring poc web apps:
                     <ul>
                         <li>Nodej JS, Express 3.x, Socket.io, MongoDB, Redis,Node Jitsu, gh-pages, Bootstrap, Modernizer, Boilerplate, Font Awesome, Backbone.js, Impress.js, Hammer.js, Phantomjs, Jquery Mobile, Ratchet/Junior</li>
                     </ul>
